--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="tech.fabernovel.nfctagsemulator"
+<manifest package="com.claireduf.sharewifi"
     xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
@@ -18,7 +18,7 @@
         android:theme="@style/AppTheme"
         >
         <activity
-            android:name=".MainActivity"
+            android:name="com.claireduf.sharewifi.MainActivity"
             android:launchMode="singleInstance"
             >
             <intent-filter>
